# Fix   - movie card favorite icon z-index reduce because icon was going top of other elements

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -28,7 +28,7 @@
     align-items: center;
     top: 6px;
     right: 6px;
-    z-index: 99999;
+    z-index: 100;
 }
 
 
